# Distributed-Task-Scheduler

./: CMakeLists.txt  MakeFile.mak  README.md
include/: Orchestrator.h  node.h  task.h
src/: Node.cpp  Orchestrator.cpp  Task.cpp  main.cpp
